<resources>
    <string name="app_name">DamasAplicacionM9</string>
    <string name="title">CHECKERS</string>
    <string name="sign_in">INICIAR SESIÓN</string>
    <string name="register">REGISTRARSE</string>
    <string name="username">NOMBRE DE USUARIO</string>
    <string name="email">CORREO ELECTRÓNICO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="repeat_passwd">REPETIR CONTRASEÑA</string>
    <string name="placeholder">Escribe aqui</string>
    <string name="not_registred">No tienes cuenta?</string>
    <string name="legal_terms">Acepta las condiciones legales para registrarte</string>
    <string name="online">ONLINE</string>
    <string name="custom">CUSTOM</string>
    <string name="shop">TIENDA</string>
    <string name="puzzles">PUZZLES</string>
    <string name="play">JUGAR</string>
    <string name="shop_lower">Tienda</string>
    <string name="puzzles_lower">Puzzles</string>
    <string name="rules_lower">Reglas</string>
    <string name="profile">PERFIL</string>
    <string name="profile_lower">Perfil</string>
    <string name="username_lower">Nombre de usuario</string>
    <string name="country">Pais</string>
    <string name="estatus">Estado</string>
    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="language">Lenguaje</string>
    <string name="invetory">Inventario</string>
    <string name="history">Historial</string>
    <string name="friends">Amigos</string>
    <string name="stats">Stats</string>
    <string name="white">BLANCAS</string>
    <string name="black">NEGRAS</string>
    <string name="board">TABLEROS</string>
    <string name="sounds">SONIDOS</string>
    <string name="search">Buscar</string>
    <string name="invite">Invitar</string>
    <string name="suggestions">Sugerencias</string>
    <string name="add">Añadir</string>
    <string name="one_week">Una semana</string>
    <string name="one_month">Un mes</string>
    <string name="one_year">Un año</string>
    <string name="everytime">Total</string>
    <string name="won_games">Partidas Ganadas</string>
    <string name="lost_games">Partidas Perdidas</string>
    <string name="completed_puzzles">Puzzles Completados</string>
    <string name="unsolved_puzzles">Puzzles no resueltos</string>
    <string name="ranking">Ranking</string>
    <string name="items_in_inventory">Cosmeticos En Posesion</string>
    <string name="victory">VICTORIA</string>
    <string name="victory_lower">Victoria</string>
    <string name="lose">DERROTA</string>
    <string name="lose_lower">Derrota</string>
    <string name="rival">rival</string>
    <string name="state_win">ganan</string>
    <string name="finding_game">Buscando partida</string>
    <string name="time">Tiempo</string>
    <string name="report">Reportar</string>
    <string name="backwards">Atras</string>
    <string name="forward">Adelante</string>
    <string name="forfeit">Rendirse</string>
    <string name="rematch">REVANCHA</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="challenges">DESAFIOS</string>
    <string name="daily">DIARIO</string>
    <string name="time_chall">CONTRARELOJ</string>
    <string name="clasic">CLÁSICO</string>
    <string name="difficulty">Dificultad</string>
    <string name="easy">Fácil</string>
    <string name="medium">Normal</string>
    <string name="hard">Difícil</string>
    <string name="extreme">Extremo</string>
    <string name="count">Cuenta</string>
    <string name="skip">SKIP</string>
    <string name="lifes_remaining">VIDAS RESTANTES: </string>
    <string name="solution">Solucion</string>
    <string name="hint">Pista</string>
    <string name="rank">Rango: x puntos</string>
    <string name="ayuda">Ayuda</string>
    <string name="lobby">Lobby</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="abrir_perfil">Abrir Perfil</string>
    <string name="abrir_lobby">Abrir Lobby</string>
    <string name="abrir_amigos">Abrir amigos</string>
    <string name="abrir_configuracion">Abrir Configuración</string>
</resources>