<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/wood2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="85dp"
        >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <TextView
            android:id="@+id/repeatPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_passwd"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/repeat_passwd_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <Button
            android:id="@+id/registerInButton"
            android:layout_width="180dp"
            android:layout_height="50dp"
            style="@style/ButtonOne"
            android:text="@string/register"
            android:layout_marginVertical="30dp"
            android:textSize="18dp"
            android:padding="0px"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/legal_terms"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:fontFamily="@font/archivo_mediumitalic"
            />
    </LinearLayout>

</RelativeLayout>