<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogInActivity"
    android:background="@drawable/wood2">


    <ImageView
        android:id="@+id/checkicon"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/mainicon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkicon"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/checkicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:padding="30px"
            android:inputType="text"
            android:hint="@string/placeholder"
            android:background="@drawable/input_bg"
            style="@style/InputEditText"
            android:textColorHint="@color/dark_green"
            />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            style="@style/ButtonOne"
            android:text="@string/sign_in"
            android:layout_marginVertical="40dp"
            android:textSize="18dp"
            android:padding="0px"
            android:layout_gravity="center"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>