<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@drawable/mainicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:layout_marginVertical="14dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_regular"
        android:text="@string/title"
        android:textColor="#330C0C"
        android:textSize="50sp"
        tools:layout_editor_absoluteY="70dp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <Button
        android:layout_marginVertical="14dp"
        android:id="@+id/signInButtonMain"
        style="@style/ButtonOne"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="17sp"
        tools:layout_editor_absoluteY="80dp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <Button
        android:layout_marginVertical="14dp"
        android:id="@+id/registerButtonMain"
        style="@style/ButtonOne"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="17sp"
        tools:layout_editor_absoluteY="80dp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/signInButtonMain"/>

</androidx.constraintlayout.widget.ConstraintLayout>